--- a/plugin.xml
+++ b/plugin.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <plugin xmlns="http://www.phonegap.com/ns/plugins/1.0"
-        id="io.bbgo.cordova.opensettings"
+        id="cordova-plugin-opensettings"
         version="1.3">
 
     <name>OpenSettings</name>
