--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cordova-plugin-opensettings",
-  "version": "1.3.0",
+  "version": "1.3.1",
   "description": "Native settings opener for Cordova 4.0",
   "cordova": {
     "id": "cordova-plugin-opensettings",
@@ -44,6 +44,9 @@
     },
     {
       "name": "perlish"
+    },
+    {
+      "name": "Iurii Kyian"
     }
   ],
   "license": "MIT",
